pihole-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  annotations:
    argocd.argoproj.io/sync-wave: "0"
