pihole-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service-dns
  namespace: pihole
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.15.5
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
