pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole.local
      secretName: pihole-tls
  rules:
    - host: pihole.local
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: pihole-service-web
                port:
                  number: 80
